--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.17"
+    "react-icons": "^5.5.0",
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^4.0.17",
+    "tsparticles": "^3.8.1",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
